atualização de titulo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Tutorial de GIT</title>
 </head>
 <body>
-    <h1>Título de teste</h1>
+    <h1>Título  para brach teste</h1>
 </body>
 </html>
