--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Título  para brach teste</h1>
-    <article> alguma coisa</article>
+    <article> conteúdo</article>
 </body>
 </html>
